# rust_data_table

./: Cargo.toml  README.md  factors.json  test_factors.csv  test_factors_factors.json
.github/workflows/: build.yml
src/: factor.rs  survival_data.rs
