[package]
name = "rust_data_table"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.50"
csv = "1.4.0"
ndarray = "0.16.1"
ordered-float = "5.1.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
